--- a/detailstyle.css
+++ b/detailstyle.css
@@ -6,47 +6,83 @@ header .container{
  position: relative; */
 }
 
-/* .gallery{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
-}
 
-.gallery a{
-    flex: 1 0 25%;
-    margin:0;
+
+.container {
+    max-height: 100vh;
+  }
+  
+  header .container .gallery {
+    display: grid;
+    grid-template-areas: "satu satu satu satu satu"
+                    "dua tiga empat lima enam"                
+        ;
+    grid-template-rows: 60vh 40vh;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 0px;
+    padding: 0px;
+  }
+  
+  .gallery a {
+    /* display: block;
+    position: relative; */
     overflow: hidden;
-    min-width: 300px;
-}
-
-.gallery a img{
+  }
+  
+  
+  .gallery a img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-} */
-
-.gallery{
-    width: 100%;
-    display : grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-}
-
-
-.label {
-    display: none; /* Initially hide the label */
+    transition: transform 0.3s;
+  }
+  
+  .gallery a:hover img {
+    transform: scale(1.05);
+  }
+  
+  .empty {
+    background-color: #f1f1f1;
+    color: black;
+    z-index: 5;
+    display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    position: absolute;
     width: 100%;
     height: 100%;
-    font-size: 24px;
-    z-index: 1;
-}
+  }
 
-.hidden {
+  .grid-satu {
+    grid-area: satu;
+  }
+  .grid-dua {
+    grid-area: dua;
+  }
+  .grid-tiga {
+    grid-area: empat;
+  }
+  .grid-lima {
+    grid-area: lima;
+  }
+  .grid-enam {
+    grid-area: enam;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .grid-enam h1{
+    position: absolute;
+    z-index: 1;
+    transition: transform 0.3s;
+    color: white;
+  }
+
+  .grid-enam h1:hover{
+    transform: scale(1.05);
+  }
+  .grid-enam img{
+    filter: brightness(40%);
+  }
+  .gallery .hidden {
     display: none;
-}
+} 
