--- a/style.css
+++ b/style.css
@@ -178,12 +178,10 @@ nav .nav-list ul {
 .header-slider {
     height: 100vh;
 }
-
 .swiper {
     width: 100%;
     height: 100%;
 }
-
 .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -192,13 +190,31 @@ nav .nav-list ul {
     justify-content: center;
     align-items: center;
 }
-
 .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
+/* lightbox */
+.gallery a {
+    /* display: block;
+    position: relative; */
+    overflow: hidden;
+  }
+  
+  
+  .gallery a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s;
+  }
+  
+  .gallery a:hover img {
+    transform: scale(1.05);
+  }
 
 /* header container */
 .header-container {
