--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
 }
 
 h1 {
-    font-size: 36px;
+    font-size: 32px;
     font-weight: 700;
 }
 
@@ -327,7 +327,7 @@ nav .nav-list ul {
 }
 
 /* provinsi */
-.list-provinsi{
+.list-provinsi {
     gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
@@ -337,7 +337,7 @@ nav .nav-list ul {
     width: 180px;
     height: 180px;
     position: relative;
-   
+
 
 }
 
@@ -357,7 +357,7 @@ nav .nav-list ul {
     transition: font-size 0.3s ease-in-out;
 }
 
-.provinsi a:hover{
+.provinsi a:hover {
     font-size: 20px;
 }
 
@@ -366,4 +366,176 @@ nav .nav-list ul {
     height: 100%;
     filter: brightness(70%);
     object-fit: cover;
+}
+
+/* detail post */
+
+.judul-post,
+.diskusi-post .container-fluid {
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+.deskripsi-post p {
+    text-align: justify;
+}
+
+.stars {
+    user-select: none;
+}
+
+.star {
+    font-size: xx-large;
+    background: unset;
+    border: none;
+}
+
+.star:hover {
+    cursor: pointer;
+}
+
+.rating form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.rating form .input{
+    font-size: medium;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 36px;
+    background: #E8E8E8;
+}
+
+.rating form .input label {
+    font-size: xx-large;
+
+}
+
+.rating form .input label:hover{
+    cursor: pointer;
+}
+
+.rating form .input #komentar-input {
+    border: none;
+    background:unset;
+}
+.rating form .input #komentar-input:focus{
+    outline: none;
+}
+
+.rating form .input button {
+    border: none;
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    font-size: x-large;
+}
+
+.rating form .input #image {
+    display: none;
+}
+
+.rating form .input img{
+    height: 24px;
+}
+
+.komentar img {
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.komentar .profile-icon {
+    gap: 10px;
+    align-items: center;
+}
+
+.komentar i {
+    font-size: medium;
+    color: #FFE500;
+}
+
+.container-isi{
+    margin-left: 60px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+.container-isi p {
+    font-weight: 400;
+    font-size: smaller;
+}
+.container-isi .opsi-komen ul{
+    display: flex;
+    list-style: none;
+    gap: 10px;
+    justify-content: end;
+    font-size: small;
+    font-weight: 500;
+}
+
+.komen-child{
+    margin-left: 60px;
+}
+
+/* balas komen */
+.balas-komen{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.balas-komen form{
+    font-size: medium;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 36px;
+    background: #E8E8E8;
+}
+
+.balas-komen form label {
+    font-size: xx-large;
+
+}
+
+.balas-komen form label:hover{
+    cursor: pointer;
+}
+
+.balas-komen form #komentar-input {
+    border: none;
+    background:unset;
+}
+.balas-komen form #komentar-input:focus{
+    outline: none;
+}
+
+.balas-komen form button {
+    border: none;
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    font-size: x-large;
+}
+
+.balas-komen form #image {
+    display: none;
+}
+
+.balas-komen form img{
+    height: 24px;
+}
+
+.balas-komen form i{
+    font-size:24px;
+    color: black;
 }
