--- a/HTML/style.css
+++ b/HTML/style.css
@@ -203,6 +203,12 @@ a:hover {
 .submit-style:hover {
     font-size: 18px;
 }
+strong{
+    font-weight: 600;
+}
+em{
+    font-style: italic;
+}
 
 /* header */
 header {
@@ -876,3 +882,83 @@ h1 {
 .info-detail input.input-profile::placeholder {
     margin-left: 10px;
 }
+
+/* POSTING */
+
+
+.form-left {
+    color: white;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.form-left label {
+    font-size: 16px;
+    text-align: center;
+}
+
+.form-left input[type="file"] {
+    width: 100%;
+    height: 100px;
+    opacity: 0;
+    cursor: pointer;
+}
+.form-left .frame-input-post{
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 1px solid #8E98A8;
+}
+.form-left .frame-input-post #imagePreview{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    display: hidden;
+}
+.form-left .frame-input-post #imagePreview img{
+    max-height: 200px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    display: hidden;
+}
+
+/* .form-right p,
+.form-right {
+    text-align: left;
+    color: #9C9C9C;
+} */
+
+.form-right label{
+    text-align: left;
+    color: black;
+}
+
+
+.form-right input[type="text"] {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+}
+
+.upload-label {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.upload-label:hover {
+    background-color: #0056b3;
+}
+
+.form-left input[type="file"] {
+    display: none;
+}  
