--- a/citranusantara/public/css/style.css
+++ b/citranusantara/public/css/style.css
@@ -736,6 +736,13 @@ table td {
     justify-content: center;
     height: 100vh;
 }
+.login-form form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .login-form input {
     width: 60%;
@@ -807,8 +814,12 @@ table td {
     display: flex;
     width: 60%;
 }
+.tab a{
+    color: #007F6D;
+}
 
 .tab {
+    
     flex: 1;
     text-align: center;
     padding: 20px;
